--- a/pages/styelsSheets/VitrineMurilo.css
+++ b/pages/styelsSheets/VitrineMurilo.css
@@ -13,18 +13,22 @@ header {
 #VitrineLoja {
     background-color: #1e2130;
     display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(20%, .5fr)); /* Ajusta a largura mínima dos itens */
+    grid-template-columns: repeat(auto-fit, minmax(20%, .5fr));
+    /* Ajusta a largura mínima dos itens */
     margin: auto;
-    gap: 10px; /* Espaçamento entre as divs */
-     padding: 5%; 
+    gap: 10px;
+    /* Espaçamento entre as divs */
+    padding: 5%;
 }
 
 .navPrincipal {
     width: 100%;
     height: 15%;
     background-color: #ED7A28;
-    display: flex;
-    align-items: center; /* Centraliza o conteúdo verticalmente */
+    display: inline-flex;
+    align-items: center;
+   
+    /* Centraliza o conteúdo verticalmente */
 }
 
 #logo {
@@ -32,14 +36,17 @@ header {
     padding: 0.5%;
 }
 
-.navItens {
-    display: flex;
+.navItens img{
+    background-color: aliceblue;
+    display: inline-flex;
+    width: 10;
 }
 
 .secundaria {
     background-color: #295c70;
     text-align: center;
     display: flex;
+    flex-direction: column-reverse;
     justify-content: center;
 }
 
@@ -59,15 +66,17 @@ header {
     flex: 1;
     width: 80%;
     height: 40vh;
-    background-color:rgb(31, 31, 34); /* Cor de fundo padrão */
+    background-color: rgb(31, 31, 34);
+    /* Cor de fundo padrão */
     margin-bottom: 15%;
     margin-left: auto;
     margin-right: auto;
     text-align: center;
-   
-    
+
+
 }
-.uniProduto img{
+
+.uniProduto img {
     width: 100px;
     position: relative;
     justify-content: center;
@@ -76,21 +85,37 @@ header {
 .footer {
     display: flex;
     justify-content: flex-end;
-   height: 70%;
-   width: 100%;
-   padding: 3%;
+    height: 70%;
+    width: 100%;
+    padding: 3%;
     background-color: #ED7A28;
 }
-.conteudo {
-    display: none;
+
+
+.link {
+    position: relative;
+    display: flex;
+    background-color: aqua;
+  
+    justify-content: center;
+    text-align: center;
+ 
 }
 
-.mostrar {
-    display: inline;
+ul {
+    margin-top: 20px;
+    margin-bottom: 20px;
+    font-size: 25px;
+    display: flex;
+    position: relative;
+    justify-content: center;
 }
 
-.ler-mais {
-    color: blue;
-    cursor: pointer;
-    font-weight: bold;
+li a {
+    text-decoration: none;
+    color: rgb(80, 79, 79);
+}
+
+li {
+    margin-left: 30px;
 }
