--- a/pages/styelsSheets/VitrineMurilo.css
+++ b/pages/styelsSheets/VitrineMurilo.css
@@ -2,120 +2,202 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-}
-
-header {
+  }
+  
+  header {
     display: flex;
     flex-direction: column;
     height: 30%;
-}
-
-#VitrineLoja {
-    background-color: #1e2130;
+  }
+  
+  body {
+    background-image: url(../../images/backgroud1.jpeg);
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
+  }
+  
+  #VitrineLoja {
     display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(20%, .5fr));
-    /* Ajusta a largura mínima dos itens */
-    margin: auto;
+    grid-template-columns: repeat(3, 1fr); /* Mantém sempre 3 colunas */
+    margin-top: 10vw;
     gap: 10px;
-    /* Espaçamento entre as divs */
-    padding: 5%;
-}
-
-.navPrincipal {
-    width: 100%;
+    padding: 9%;
+  }
+  
+  .navPrincipal {
+    position: fixed;
     height: 15%;
-    background-color: #ED7A28;
-    display: inline-flex;
+    width: 100%;
+    background-color: rgba(44, 144, 166, 0.5);
+    display: flex;
+    justify-content: space-between;
     align-items: center;
-   
-    /* Centraliza o conteúdo verticalmente */
-}
-
-#logo {
-    width: 15%;
-    padding: 0.5%;
-}
-
-.navItens img{
-    background-color: aliceblue;
-    display: inline-flex;
-    width: 10;
-}
-
-.secundaria {
-    background-color: #295c70;
+    padding: 10px;
+  }
+  
+  #pesquisa {
+    margin-left: auto;
+    border: 2px solid #1e2130; 
+    border-radius: 4px;
+    font-size: 1rem; 
+    color: #1e2130; 
+    background-color: rgba(255, 255, 255, 0.8); 
+  }
+  
+  #pesquisa::placeholder {
+    color: #7d7d7d;
+    opacity: 1;
+    font-style: italic;
+    font-size: 1rem;
+  }
+  
+  #logo {
+    display: flex;
+    margin: 16% 0 0;
+    padding: 4%;
+    width: 300px;
+  }
+  
+  .secundaria {
+    position: fixed;
+    top: 15%;
+    background-color: #e4a67dbb;
     text-align: center;
     display: flex;
     flex-direction: column-reverse;
     justify-content: center;
-}
-
-.secundaria h3 {
-    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    width: 100%;
+    height: 3%;
+  }
+  
+  .secundaria h3 {
+    font-family: 'Cinzel Decorative';
     color: white;
     font-weight: 400;
-    font-size: small;
-}
-
-.uniProduto {
+    font-size: medium;
+  }
+  
+  .uniProduto {
     border-radius: 10px;
     box-shadow: 3px 3px 7px 1px rgba(0, 0, 0, 0.281);
     display: flex;
-    position: relative;
     flex-direction: column;
     flex: 1;
     width: 80%;
-    height: 40vh;
-    background-color: rgb(31, 31, 34);
-    /* Cor de fundo padrão */
-    margin-bottom: 15%;
-    margin-left: auto;
-    margin-right: auto;
+    height: 60vh;
+    background-color: rgba(31, 31, 34, 0.336);
+    margin: 0 auto 15%; /* Mantém centralizado */
     text-align: center;
-
-
-}
-
-.uniProduto img {
-    width: 100px;
-    position: relative;
     justify-content: center;
-}
-
-.footer {
+    align-items: center;
+  }
+  #textProduto{
+    color: white;
+    margin-top: -10%;
+  }
+  #imgProduto{
+    margin-top: 10%;
+  }
+  .uniProduto img {
+    width: 200px;
+    height: auto;
+    max-width: 200px;
+    object-fit: cover;
+    margin-bottom: 15px;
+  }
+  
+  .uniProduto button {
+    margin-top: 6%;
+    width: 60%;
+    height: 8%;
+    padding: auto;
+    color: white;
+    background-color: #295c70;
+    
+  }
+  
+  .footer {
     display: flex;
-    justify-content: flex-end;
+    justify-content: center;
     height: 70%;
     width: 100%;
     padding: 3%;
-    background-color: #ED7A28;
-}
-
-
-.link {
-    position: relative;
-    display: flex;
-    background-color: aqua;
+    background-color: #e4a67dbb;
+  }
   
-    justify-content: center;
-    text-align: center;
- 
-}
-
-ul {
-    margin-top: 20px;
-    margin-bottom: 20px;
-    font-size: 25px;
-    display: flex;
-    position: relative;
-    justify-content: center;
-}
-
-li a {
+  #form,
+  #Vendedores {
+    font-family: 'Cinzel Decorative';
     text-decoration: none;
-    color: rgb(80, 79, 79);
-}
+    color: white;
+    font-size: 1.5rem;
+    margin: 0 20px;
+    justify-content: flex-end;
+  }
+  
+  .link {
+    flex-direction: row; 
+    justify-content: flex-end;
+    align-items: center; 
+    margin-right: 250px;
+    padding: 10px;
 
-li {
-    margin-left: 30px;
-}
+  }
+  #carrim{
+    margin-right: 20px;
+  }
+  
+  /* Responsividade */
+  @media (max-width: 1200px) {
+    .navPrincipal {
+      padding: 5px;
+    }
+  
+    #logo {
+      width: 80%;
+    }
+  
+    .link {
+      margin-right: 100px;
+      margin-left: 100px;
+    }
+  }
+  
+  @media (max-width: 800px) {
+    #VitrineLoja {
+      grid-template-columns: repeat(1, 1fr);
+    }
+    .navPrincipal {
+      flex-direction: column;
+      height: auto;
+    }
+  
+    .secundaria {
+      height: auto;
+    }
+  
+    .link {
+      margin-right: 50px;
+      margin-left: 50px;
+    }
+  
+    #logo {
+      width: 100%;
+    }
+  }
+  
+  @media (max-width: 500px) {
+    .uniProduto {
+      height: auto;
+    }
+  
+    .secundaria h3 {
+      font-size: x-small;
+    }
+  
+    .navPrincipal {
+      flex-direction: column;
+    }
+  }
+  
