--- a/pages/styelsSheets/descricao.css
+++ b/pages/styelsSheets/descricao.css
@@ -120,3 +120,22 @@ main {
   font-weight: bold;
   color: white;
 }
+@keyframes pulse {
+  0% {
+    transform: scale(1);
+  }
+
+  50% {
+    transform: scale(1.2);
+    /* Aumenta o tamanho temporariamente */
+  }
+
+  100% {
+    transform: scale(1);
+  }
+}
+
+/* Classe que ativa a animação */
+.pulse-animation {
+  animation: pulse 0.3s ease-in-out;
+}
