--- a/pages/styelsSheets/VitrineMurilo.css
+++ b/pages/styelsSheets/VitrineMurilo.css
@@ -19,8 +19,7 @@ body {
 
 #VitrineLoja {
   display: grid;
-  grid-template-columns: repeat(3, 1fr);
-  /* Mantém sempre 3 colunas */
+  grid-template-columns: repeat(3, 1fr);/* Mantém sempre 3 colunas */
   margin-top: 10vw;
   gap: 10px;
   padding: 9%;
@@ -31,8 +30,15 @@ body {
   height: 4%;
   border-radius: 10px;
   text-align: center;
-  background-color: #e4a67dbb;
+  background-color: #e4a77d;
   color: white;
+}
+.preco {
+  font-size: 2em;
+  text-align: center;
+  margin-top: 15px;
+  font-family: 'Cinzel Decorative';
+  color: #e4a77d;
 }
 
 .navPrincipal {
@@ -42,10 +48,8 @@ body {
   background-color: rgba(44, 144, 166, 0.5);
   display: flex;
   text-align: center;
-  justify-content: center;
   align-items: center;
   padding: 80px 20px;
-
 }
 
 #pesquisa {
@@ -78,10 +82,11 @@ body {
   background-color: #e4a67dbb;
   width: 100px;
   height: 100px;
-  border-radius: 15px;
+  border-radius: 50%;
   justify-content: center;
   align-items: center;
   text-align: center;
+  margin-right: 5%;
 
 }
 
@@ -111,8 +116,7 @@ body {
   width: 80%;
   height: 60vh;
   background-color: rgba(31, 31, 34, 0.336);
-  margin: 0 auto 15%;
-  /* Mantém centralizado */
+  margin: 0 auto 15%;/* Mantém centralizado */
   text-align: center;
   justify-content: center;
   align-items: center;
@@ -147,15 +151,14 @@ body {
   background-color: #295c70;
 
 }
-
-
 .footer {
-  display: flex;
-  justify-content: center;
-  height: 70%;
-  width: 100%;
-  padding: 3%;
-  background-color: #e4a67dbb;
+  background-color: rgba(228, 167, 125, 0.7);
+  color: #295c70;
+  font-size: larger;
+  padding: 20px;
+  text-align: center;
+  position: relative;
+  z-index: 10;
 }
 
 #form,
@@ -172,7 +175,6 @@ body {
   position: relative;
   margin-left: 150px;
   padding: 10px;
-
 }
 
 #carrinho {
@@ -180,7 +182,7 @@ body {
   justify-content: center;
   align-items: center;
   margin: 20px auto;
-  padding: 10px 20px;
+  padding: 5px 10px;
   font-size: 2rem;
   background-color: rgba(44, 144, 166, 0.8);
   border: none;
@@ -245,22 +247,17 @@ body {
 /* Responsividade para tamanhos menores */
 @media (max-width: 800px) {
   #carrinho {
-    font-size: 1.5rem;
-    /* Ajusta o tamanho da fonte */
-    padding: 8px 16px;
-    /* Ajusta o preenchimento */
+    font-size: 1.5rem;/* Ajusta o tamanho da fonte */
+    padding: 8px 16px;/* Ajusta o preenchimento */
   }
 }
 
 @media (max-width: 500px) {
   #carrinho {
-    font-size: 1.2rem;
-    /* Ajusta ainda mais o tamanho da fonte */
-    padding: 6px 12px;
-    /* Ajusta o preenchimento */
+    font-size: 1.2rem;/* Ajusta ainda mais o tamanho da fonte */
+    padding: 6px 12px;/* Ajusta o preenchimento */
   }
 }
-
 
 /* Responsividade */
 @media (max-width: 1200px) {
