--- a/images/style.css
+++ b/images/style.css
@@ -1,102 +1,145 @@
- *{
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-}
-
-
 body {
-    background-image: url(back1.jpeg);
-    background-size: cover;
-    background-position: center;
-    background-repeat: no-repeat;
-    font-family: Arial, sans-serif;
-    color: #fff;
+  margin: 0;
+  padding: 0;
+  background: url(../../images/backgroud1.jpeg) no-repeat center center;
+  position: relative;
+  background-size: cover;
+  display: flex;
+  flex-direction: column;
+}
+main {
+  flex: 1; 
+  display: flex;
+  flex-direction: column; 
+  align-items: center; 
+  justify-content: center; 
+  margin-top: 200px;
 }
 
-/*logotipo */
-#logo {
-    position: relative;
-    width: 50%;
-    max-width: 500px;
-    margin: 20px 0;
-    padding: 0;
-    top: -130px;
-}
-
-/*cabeçalho */
-header {
-    background-color: rgba(44, 144, 166, 0.5);
-    text-align: center;
-    padding: 80px;
-    height: 100px;
-    display: flex;
+.Banner {    
+    position: fixed;
+    height: 15%;
     width: 100%;
-    justify-content: space-between;
-    transition: height 0.3s;
-}
-
-header h1 {
-    font-size: 2.5rem;
-    color: #fff;
-    margin-top: 0;
-    padding: 20px 0;
-}
-
-/* Titulo vendedores */
-h2 {
-    text-align: center;
-    margin-top: 20px;
-    margin-bottom: 20px;
-    font-size: 2rem;
-}
-
-.container {
+    background-color: rgba(44, 144, 166, 0.5);
     display: flex;
-    flex-wrap: wrap;
     justify-content: space-between;
-    margin-top: 80px;
-    padding: 20px;
+    align-items: center;
+    padding: 10px;
 }
 
-/*vendedores individuais */
-.vendedor {
-    background-color: rgba(255, 255, 255, 0.2);
-    padding: 20px;
-    text-align: center;
-    margin: 10px;
-    flex: 0 1 calc(33.33% - 20px);
-    box-sizing: border-box;
+.navItems {
+    display: flex;
+    flex-direction: row; 
+    align-items: center;
+    margin-left: auto; 
+    margin-right: 10%;
+}
+#carrim {
+    margin-right: -100px;
+    color: white;
+}
+#botao{
+    margin-right: 10px;
+    text-decoration: none;
+    color: aliceblue;
+ }
+
+.btn{
+  width: 200px;
+  height: 50px;
+  text-decoration: none;
+  padding: 7px 15px;
+  border-radius: 20px;
+  font-family: "Cinzel Decorative", serif;
+  font-weight: bold;
+  background-color: rgba(144, 184, 235, 0.1);
+  color: white;
+  border: none;
+  cursor: pointer;
+  transition: background-color 0.3s;
+
+}
+.btn:hover {
+        background-color:#e4a77d;   
 }
 
-/* imagem  vendedores */
-.vendedor img {
-    width: 120px;
-    height: 120px;
-    border-radius: 50%;
+.Banner.btn{
+    display: flex;
+    align-items: end;
+    justify-content: end;       
+}
+#logo {
+  margin-left: 40px;
+  height: 166px;
+  width: 230px;
+  position: relative;
+
+}
+#titulo {
+  color: white;
+  text-align: center;
+  font-family: "Cinzel Decorative", serif;
+}
+#descricao {
+  width: 50%;
+  color: white;
+  text-align: center;
+  font-family: "Cinzel Decorative", serif;
+  align-items: center;
 }
 
-/*botoes*/
-.botao-link img {
-    width: 40px;
-    height: 40px;
-    cursor: pointer;
-    margin-top: 10px;
-    transition: transform 0.2s ease;
+#criadores {
+  font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
+  text-align: center;
+  color: white;
+  word-spacing: 2px;
+  background-color: #e4a67dbb;
+  position: relative;
+  bottom: 0;
+  width: 100%;
+  padding: 10px;
+  margin-top: 50px;
+}
+#id {
+  color: white;
+}
+#preco {
+  font-size: 2em;
+  text-align: center;
+  margin-top: 15px;
+  font-family: 'Cinzel Decorative';
+  color: #e4a77d;
+}
+#descricao {
+  color: white;
+}
+#container {
+  position: relative;
+  float: right;
+  margin-top: 30px;
+  margin-left: 10px;
+  padding-bottom: 7px;
+  border-radius: 20px;
+  font-family: "Cinzel Decorative", serif;
+  font-weight: bold;
+  color: white;
+}
+@keyframes pulse {
+  0% {
+    transform: scale(1);
+  }
+
+  50% {
+    transform: scale(1.2);
+    /* Aumenta o tamanho temporariamente */
+  }
+
+  100% {
+    transform: scale(1);
+  }
 }
 
-.botao-link img:hover {
-    transform: scale(1.1);
-}
-
-/* Rodape */
-footer {
-    background-color:rgba(44, 144, 166, 0.5); 
-    color:#e4a77d;
-    font-size: larger;
-    padding: 20px; 
-    text-align: center; 
-    position: relative; 
-    z-index: 10;
-
+/* Classe que ativa a animação */
+.pulse-animation {
+  animation: pulse 0.3s ease-in-out;
 }
