--- a/pages/styelsSheets/VitrineMurilo.css
+++ b/pages/styelsSheets/VitrineMurilo.css
@@ -19,7 +19,8 @@ body {
 
 #VitrineLoja {
   display: grid;
-  grid-template-columns: repeat(3, 1fr);/* Mantém sempre 3 colunas */
+  grid-template-columns: repeat(3, 1fr);
+  /* Mantém sempre 3 colunas */
   margin-top: 10vw;
   gap: 10px;
   padding: 9%;
@@ -33,6 +34,7 @@ body {
   background-color: #e4a77d;
   color: white;
 }
+
 .preco {
   font-size: 2em;
   text-align: center;
@@ -116,7 +118,8 @@ body {
   width: 80%;
   height: 60vh;
   background-color: rgba(31, 31, 34, 0.336);
-  margin: 0 auto 15%;/* Mantém centralizado */
+  margin: 0 auto 15%;
+  /* Mantém centralizado */
   text-align: center;
   justify-content: center;
   align-items: center;
@@ -151,6 +154,7 @@ body {
   background-color: #295c70;
 
 }
+
 .footer {
   background-color: rgba(228, 167, 125, 0.7);
   color: #295c70;
@@ -245,66 +249,133 @@ body {
 /* animação do botão */
 
 /* Responsividade para tamanhos menores */
-@media (max-width: 800px) {
-  #carrinho {
-    font-size: 1.5rem;/* Ajusta o tamanho da fonte */
-    padding: 8px 16px;/* Ajusta o preenchimento */
-  }
-}
-
-@media (max-width: 500px) {
-  #carrinho {
-    font-size: 1.2rem;/* Ajusta ainda mais o tamanho da fonte */
-    padding: 6px 12px;/* Ajusta o preenchimento */
-  }
-}
 
 /* Responsividade */
-@media (max-width: 1200px) {
+@media screen and (max-width: 1200px) {
   .navPrincipal {
     padding: 5px;
   }
 
   #logo {
-    width: 80%;
+    width: 100%;
+  }
+  #imglog{
+    width: 80px;
+    
+  }
+  #imglog img {
+    margin-right: 15px;
+  }
+  #imglog #lg{
+    display: none;
   }
 
   .link {
-    margin-right: 100px;
-    margin-left: 100px;
+    margin-right: -25%;
   }
+  #carrinho.car {
+    margin-right: 100px;
+  }
+
 }
 
-@media (max-width: 800px) {
+@media screen and (max-width: 800px) {
   #VitrineLoja {
     grid-template-columns: repeat(1, 1fr);
   }
 
-  .navPrincipal {
-    flex-direction: column;
-    height: auto;
+  #imglog {
+    width: 10px;
+    width: 50px;
+  
+    justify-content: center;
+    
   }
+  #link{
+    margin-right: -100px;
+  }
+  #imglog img {
+    width: 70px;
+    margin-right: 15px;
+  }
+  #imglog #lg{
+    display: none;
+  }
+ 
+  #carrinho {
+    font-size: 1.5rem;
+ 
+  }
+} 
 
-  .link {
-    margin-right: 50px;
-    margin-left: 50px;
+
+@media screen and (max-width: 500px) {
+  .navPrincipal {
+    padding: 5px;
+    flex-direction: column;
+  }
+  #VitrineLoja{
+    margin-top: 200px;
   }
 
   #logo {
-    width: 100%;
+    margin-left: -40px;
+    width: 40%;
   }
-}
 
-@media (max-width: 500px) {
-  .uniProduto {
-    height: auto;
+  .link {
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin-top: -100px;
+    margin-right: 100px;
+    
+  }
+
+  #form {
+    font-size: 1.0rem;
+
+  }
+  #imglog {
+    width: 50px;
+    width: 50px;
+    margin-top: -100px;
+    justify-content: center;
+    margin-right: 50px;
+  }
+
+  #imglog img {
+    width: 70px;
+    margin-right: 15px;
+  }
+  #imglog #lg{
+    display: none;
+  }
+
+  #Vendedores {
+    font-size: 1.0rem;
   }
 
   .secundaria h3 {
     font-size: x-small;
   }
 
-  .navPrincipal {
-    flex-direction: column;
+  .icone{
+    width: 0px;
+    margin-right: -20px;
+    margin-left: -20px;
+  }
+  #carrinho.car{
+    width: 65px;
+    height: 65px;
+    margin-right: 20px;
+   
+  }
+  #carrinho {
+    font-size: 1.2rem;
+    /* Ajusta ainda mais o tamanho da fonte */
+    padding: 6px 12px;
+    /* Ajusta o preenchimento */
   }
 }
