--- a/pages/styelsSheets/formulario.css
+++ b/pages/styelsSheets/formulario.css
@@ -4,7 +4,7 @@
 }
 
 body {
-  background-image: url("../../68f2c2d2-f987-45c0-9a27-fcd78c4fdd3a.jpeg");
+  background-image: url("../../images/backgourd3.jpeg");
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center;
@@ -23,9 +23,12 @@ form {
   width: 200px;
   height: 270px;
   margin-top: 1%;
+  display: table;
 }
+
 .navPrincipal {
   position: relative;
+  flex-direction: column;
   width: 100%;
   height: 200px;
   background-color: rgba(44, 144, 166, 0.5);
@@ -34,18 +37,23 @@ form {
   justify-content: center;
 }
 
+
+
 #logo {
-  width: 300px;
+  width: 250px;
+  height: 150px;
   display: flex;
   justify-content: center;
   align-items: center;
 }
+
 .box {
   height: auto;
   display: flex;
   justify-content: center;
   align-items: center;
 }
+
 .box label {
   text-align: left;
 }
@@ -79,6 +87,11 @@ textarea {
   background-color: #2c90a6;
   border-radius: 7px;
   color: white;
+
+}
+
+#texbox {
+  width: 200px;
 }
 
 label,
